--- a/Phase_B/gptalk-frontend/src/app/login/login.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/login/login.component.scss
@@ -1,12 +1,25 @@
-.p-card {
-  padding: 2rem;
+:host {
+	display: block;
+	display: grid;
+	place-items: center;
+	min-height: 100dvh;
 }
+.form-wrapper {
+	position: relative;
+	background-color: #fff;
+	width: fit-content;
+	display: flex;
+  gap: 2rem;
+	padding: 6rem 4rem;
+	border-radius: 6px;
 
-.p-card-title {
-  text-align: center;
-  margin-bottom: 2rem;
-}
+	& form {
+		display: flex;
+		flex-direction: column;
+		gap: 2rem;
 
-.p-field {
-  margin-bottom: 1rem;
+		& h1 {
+			color: var(--primary-clr) !important;
+		}
+	}
 }
