--- a/Phase_B/gptalk-frontend/src/styles.scss
+++ b/Phase_B/gptalk-frontend/src/styles.scss
@@ -26,6 +26,6 @@
 
 	body {
 		margin: 0;
-		font-family: Roboto, 'Helvetica Neue', sans-serif;
+		font-family: Poppins, 'Helvetica Neue', sans-serif !important;
 	}
 }
