--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
@@ -31,6 +31,81 @@
     caret-color: transparent;
   }
 }
+
+.sentence-input-area {
+  padding: 5px;
+  font-size: 1.6rem;
+  font-family: Poppins, sans-serif;
+  border-color: var(--gray-700);
+  border-radius: 15px;
+  border-width: 4px;
+  background: var(--gray-200);
+  resize: none;
+  max-width: 70vw;
+}
+
+.chat-input-field {
+  padding: 5px;
+  font-size: 1.6rem;
+  font-family: Poppins, sans-serif;
+  border-color: transparent;
+  border-width: 0;
+  resize: none;
+  text-wrap: wrap;
+  overflow: auto;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.chat-wrapper {
+  font-size: 1.6rem;
+}
+
+//::ng-deep .chat-option-btn {
+//  width: 300px;
+//  display: flex;
+//  justify-content: center;
+//}
+.chat-input-field {
+  background-color: transparent;
+  color: white;
+}
+
+//::ng-deep textarea {
+//  color: white;
+//}
+
+
+
+.bubble {
+  --r: 1em;  /* the radius */
+  --t: 1.5em; /* the size of the tail */
+
+  //max-width: 300px;
+  padding: 1em;
+  border-inline: var(--t) solid #0000;
+  border-radius: calc(var(--r) + var(--t))/var(--r);
+  mask:
+    radial-gradient(100% 100% at var(--_p) 0,#0000 99%,#000 102%)
+    var(--_p) 100%/var(--t) var(--t) no-repeat,
+    linear-gradient(#000 0 0) padding-box;
+  color: #fff;
+}
+.left {
+  --_p: 0;
+  border-bottom-left-radius: 0 0;
+  place-self: start;
+  background: var(--blue-400);
+}
+.right {
+  --_p: 100%;
+  border-bottom-right-radius: 0 0;
+  place-self: end;
+  background: var(--blue-500);
+}
+
 ::ng-deep .buttons-group {
   width: 800px;
   transition: all 0.25s ease;
@@ -51,14 +126,6 @@
     }
   }
 
-  & .btn-matching-pairs {
-      & button:active {
-        background: var(--blue-300);
-        border-color: var(--blue-300);
-      }
-  }
-
-
   & .btn-correct {
     background: var(--accent-text-clr);
     border-color: var(--accent-text-clr);
@@ -74,7 +141,23 @@
     border-color: var(--yellow-400);
   }
 
+
+
+
 }
 
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
 
 
