--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
@@ -90,7 +90,7 @@
   mask:
     radial-gradient(100% 100% at var(--_p) 0,#0000 99%,#000 102%)
     var(--_p) 100%/var(--t) var(--t) no-repeat,
-    linear-gradient(#000 0 0) padding-box;
+    linear-gradient(#000, #000) padding-box;
   color: #fff;
 }
 .left {
