--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
@@ -44,6 +44,10 @@
   max-width: 70vw;
 }
 
+translation-wrapper {
+  font-size: 18px;
+}
+
 .chat-input-field {
   padding: 5px;
   font-size: 1.6rem;
@@ -112,10 +116,11 @@
 
   & button {
     font-size: 36px;
-    word-wrap:break-word;
+    word-wrap: break-word;
     text-transform: capitalize;
 
   }
+
   & .next-btn-wrapper {
     margin-top: 15px;
     margin-right: 5px;
@@ -140,24 +145,10 @@
     background: var(--yellow-400);
     border-color: var(--yellow-400);
   }
-
-
-
-
 }
 
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+.results-wrapper {
+  text-align: center;
+  font-size: 2.6rem;
 }
-
 
